--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,37 +1,41 @@
+<%= render 'errors', object: message %>
+
 <%= form_with(model: message) do |form| %>
-  <% if message.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
-
-      <ul>
-        <% message.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <div class="field">
+    <div class="label">
+      <%= form.label :title %>
     </div>
-  <% end %>
-
+    <div class="control">
+      <%= form.text_field :title, class: 'input' %>
+    </div>
+  </div>
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <div class="label">
+      <%= form.label :schedule %>
+    </div>
+    <div class="control">
+      <%= form.text_field :schedule, class: 'input' %>
+    </div>
   </div>
-
   <div class="field">
-    <%= form.label :schedule %>
-    <%= form.text_field :schedule %>
+    <div class="label">
+      <%= form.label :body %>
+    </div>
+    <div class="control">
+      <%= form.text_area :body, class: 'textarea' %>
+    </div>
   </div>
-
   <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
+    <div class="label">
+      <%= form.label :channel_id %>
+    </div>
+    <div class="select">
+      <%= form.collection_select :channel_id, Channel.all, :id, :name %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :channel_id %>
-    <%= form.collection_select :channel_id, Channel.all, :id, :name %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+ <div class="field">
+   <div class="control">
+     <%= form.submit 'Submit', class: 'button is-link' %>
+   </div>
+ </div>
 <% end %>
