--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Message</h1>
-
-<%= render 'form', message: @message %>
-
-<%= link_to 'Show', @message %> |
-<%= link_to 'Back', messages_path %>
+<div class="column is-three-fifths is-offset-one-fifth">
+  <h2 class="title is-4">Editing Message</h2>
+  <%= render 'form', message: @message %>
+</div>
