--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -1,27 +1,25 @@
+<%= render 'errors', object: channel %>
+
 <%= form_with(model: channel) do |form| %>
-  <% if channel.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(channel.errors.count, "error") %> prohibited this channel from being saved:</h2>
-
-      <ul>
-        <% channel.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <div class="field">
+    <div class="label">
+      <%= form.label :name %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <div class="control">
+      <%= form.text_field :name, class: 'input' %>
+    </div>
   </div>
-
   <div class="field">
-    <%= form.label :webhook_url %>
-    <%= form.text_area :webhook_url %>
+    <div class="label">
+      <%= form.label :webhook_url %>
+    </div>
+    <div class="control">
+      <%= form.text_area :webhook_url, class: 'input'  %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="field">
+    <div class="control">
+      <%= form.submit 'Submit', class: 'button is-link' %>
+    </div>
   </div>
 <% end %>
