--- a/app/views/channels/edit.html.erb
+++ b/app/views/channels/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Channel</h1>
-
-<%= render 'form', channel: @channel %>
-
-<%= link_to 'Show', @channel %> |
-<%= link_to 'Back', channels_path %>
+<div class="column is-three-fifths is-offset-one-fifth">
+  <h2 class="title is-4">Editing Channel</h2>
+  <%= render 'form', channel: @channel %>
+</div>
