--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,29 +1,24 @@
-<p id="notice"><%= notice %></p>
+<h2 class="title is-4">Channels</h2>
 
-<h1>Channels</h1>
-
-<table>
+<table class="table is-fullwidth is-striped">
   <thead>
     <tr>
       <th>Name</th>
       <th>Webhook url</th>
-      <th colspan="3"></th>
+      <th colspan="2">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @channels.each do |channel| %>
       <tr>
-        <td><%= channel.name %></td>
-        <td><%= channel.webhook_url %></td>
-        <td><%= link_to 'Show', channel %></td>
-        <td><%= link_to 'Edit', edit_channel_path(channel) %></td>
-        <td><%= link_to 'Destroy', channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to channel.name, channel %></td>
+        <td><%= truncate channel.webhook_url %></td>
+        <td width="2%"><%= link_to 'Edit', edit_channel_path(channel), class: 'button is-small' %></td>
+        <td width="2%"><%= link_to 'Destroy', channel, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Channel', new_channel_path %>
+<%= link_to 'New Channel', new_channel_path, class: 'button is-small' %>
