--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Channel</h1>
-
-<%= render 'form', channel: @channel %>
-
-<%= link_to 'Back', channels_path %>
+<div class="column is-three-fifths is-offset-one-fifth">
+  <h2 class="title is-4">New Channel</h2>
+  <%= render 'form', channel: @channel %>
+</div>
