--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BootcampReminder</title>
+    <title>Discord Reminder</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,30 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'flash' %>
+    <!-- START NAV -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <%= link_to 'Discord Reminder', root_path, class: 'navbar-item brand-text' %>
+          <div class="navbar-burger burger" data-target="navMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        <div id="navMenu" class="navbar-menu">
+          <div class="navbar-start">
+            <%= link_to 'Messages', messages_path, class: 'navbar-item' %>
+            <%= link_to 'Channels', channels_path, class: 'navbar-item' %>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- END NAV -->
+
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
