--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,33 +1,27 @@
-<p id="notice"><%= notice %></p>
+<h2 class="title is-4">Messages</h2>
 
-<h1>Messages</h1>
-
-<table>
+<table class="table is-fullwidth is-striped">
   <thead>
     <tr>
       <th>Title</th>
       <th>Schedule</th>
       <th>Body</th>
       <th>Channel</th>
-      <th colspan="3"></th>
+      <th colspan="2">Actions</th>
     </tr>
   </thead>
-
   <tbody>
     <% @messages.each do |message| %>
       <tr>
-        <td><%= message.title %></td>
+        <td><%= link_to message.title, message %></td>
         <td><%= message.schedule %></td>
-        <td><%= message.body %></td>
+        <td><%= truncate message.body %></td>
         <td><%= message.channel_id %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td width="2%"><%= link_to 'Edit', edit_message_path(message), class: 'button is-small' %></td>
+        <td width="2%"><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Message', new_message_path %>
+<%= link_to 'New Message', new_message_path, class: 'button is-small' %>
