--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Message</h1>
-
-<%= render 'form', message: @message %>
-
-<%= link_to 'Back', messages_path %>
+<div class="column is-three-fifths is-offset-one-fifth">
+  <h2 class="title is-4">New Message</h2>
+  <%= render 'form', message: @message %>
+</div>
