--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= link_to message.title, message %></td>
         <td><%= message.schedule %></td>
         <td><%= truncate message.body %></td>
-        <td><%= message.channel_id %></td>
+        <td><%= message.channel.name %></td>
         <td width="2%"><%= link_to 'Edit', edit_message_path(message), class: 'button is-small' %></td>
         <td width="2%"><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small' %></td>
       </tr>
