--- a/app/views/application/_flash.html.erb
+++ b/app/views/application/_flash.html.erb
@@ -1,6 +1,10 @@
 <% if notice %>
-  <p><%= notice %></p>
+<div class="notification is-success">
+  <%= notice %>
+</div>
 <% end %>
 <% if alert %>
-  <p><%= alert %></p>
+<div class="notification is-danger">
+  <%= alert %>
+</div>
 <% end %>
