--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -12,10 +12,18 @@
   <tbody>
     <% @channels.each do |channel| %>
       <tr>
-        <td><%= link_to channel.name, channel %></td>
+        <td><%= channel.name %></td>
         <td><%= truncate channel.webhook_url %></td>
-        <td width="2%"><%= link_to 'Edit', edit_channel_path(channel), class: 'button is-small' %></td>
-        <td width="2%"><%= link_to 'Destroy', channel, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small' %></td>
+        <td width="2%">
+          <%= link_to edit_channel_path(channel), class: 'button is-small' do %>
+            <i class="fas fa-edit"></i>
+          <% end %>
+        </td>
+        <td width="2%">
+          <%= link_to channel, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small' do %>
+            <i class="fas fa-trash-alt"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
