--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,31 +8,12 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   </head>
 
   <body>
+    <%= render 'nav' %>
     <%= render 'flash' %>
-    <!-- START NAV -->
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-brand">
-          <%= link_to 'Discord Reminder', root_path, class: 'navbar-item brand-text' %>
-          <div class="navbar-burger burger" data-target="navMenu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
-        <div id="navMenu" class="navbar-menu">
-          <div class="navbar-start">
-            <%= link_to 'Messages', messages_path, class: 'navbar-item' %>
-            <%= link_to 'Channels', channels_path, class: 'navbar-item' %>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <!-- END NAV -->
-
     <div class="container">
       <%= yield %>
     </div>
