--- a/app/views/application/_flash.html.erb
+++ b/app/views/application/_flash.html.erb
@@ -1,10 +1,12 @@
 <% if notice %>
 <div class="notification is-success">
+  <button class="delete"></button>
   <%= notice %>
 </div>
 <% end %>
 <% if alert %>
 <div class="notification is-danger">
+  <button class="delete"></button>
   <%= alert %>
 </div>
 <% end %>
